--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn {
+/* .btn {
   background: linear-gradient(
     45.23deg,
-    #ff56f6 11.43%,
-    #b936ee 45.63%,
-    #3bace2 80%,
-    #406aff 107.04%
+    #00f0cc 11.43%,
+    #02cac7af 45.63%,
+    #3a506b 80%,
+    #0d1637 107.04%
   );
   box-shadow: 0px 4.42184px 100px rgba(162, 63, 214, 0.51);
 
@@ -18,27 +18,28 @@
   box-shadow: 0px 4.42184px 100px rgba(0, 187, 255, 0.51);
   background: linear-gradient(
     45.23deg,
-    #406aff 11.43%,
-    #3bace2 45.63%,
-    #b936ee 85%,
-    #ff56f6 107.04%
+    #0d1637 12.63%,
+    #3a506b 45.63%,
+    #02cac7af 85%,
+    #00f0cc 107.04%
   );
-}
+} */
 
 .gradient,
 .active {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
-    #3bace2 50.63%,
-    #b936ee 100%,
-    #ff56f6 117.04%
+    #00f6e9 10.43%,
+    #00a878af 100%,
+    #00ffeaaf 100%,
+    #00f0cc 137.04%
   );
+  
   
 }
 
 .active {
-  color: #fff;
+  color: #535353;
   padding: 0.25rem;
   border-radius: 100%;
   align-items:center;
@@ -55,19 +56,19 @@
     @apply font-primary font-semibold text-[26px] mb-6 leading-[46px];
   }
   .btn {
-    @apply rounded-full font-primary text-white font-medium;
+    @apply bg-gradient-to-tr from-teal-400 to-slate-800 hover:from-slate-800 hover:to-teal-400 shadow-lg hover:shadow-teal-500 transition-all duration-500 rounded-full font-primary text-white font-medium;
   }
   .btn-sm {
-    @apply h-[40px] px-6 text-sm;
+    @apply  h-[40px] px-6 text-sm;
   }
   .btn-lg {
-    @apply h-[56px] px-10 text-base;
+    @apply  h-[56px] px-10 text-base;
   }
   .btn-link {
-    @apply text-base;
+    @apply  text-base;
   }
   .text-gradient {
-    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#51e2ff] to-[#cd42c1] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
+    @apply bg-gradient-to-r text-transparent bg-clip-text  from-teal-300 to-slate-600 font-bold font-primary hover:from-slate-600 hover:to-teal-300;
   }
   .section {
     @apply py-8 lg:py-24 lg:h-screen flex items-center;
